# ComfyUI-AudioBatch

./: .gitignore  README.md  __init__.py  nodes_audio.py  pyproject.toml  requirements.txt
.github/workflows/: publish_comfy_registry_action.yml  python-tests.yml
assets/: README.md
example_workflows/: Split MP3 And Convert To 6 Channel.json  audio_batch_select_example.json  audio_batch_select_example_extra.json  cut_and_concat.json  generate_and_blend.json  join_and_split.json  normalize_and_undo.json  resample_force_stereo.json  resample_force_stereo_extra.json
js/: toast_handler.js
source/: Makefile  requirements-dev.txt
source/nodes/: nodes_audio.py
source/nodes/utils/: aligner.py  comfy_notification.py  downloader.py  downmix.py  logger.py  misc.py
source/tests/: test_audio_concatenate.py  test_audio_normalize.py  test_audio_processing_nodes.py  test_audio_test_signal_generator.py  test_misc_utils.py
src/: Makefile  requirements-dev.txt
src/nodes/: __init__.py  nodes_audio.py
src/nodes/utils/: aligner.py  downmix.py  misc.py
src/tests/: test_audio_batch.py  test_audio_blend.py  test_audio_join_split.py  test_audio_note_node.py  test_audio_test_signal_generator.py  test_downmix_util.py  test_select_audio_from_batch.py
utils/: logger.py  misc.py
