[project]
name = "audio-batch"
description = """
Audio batch creation, extraction, information, resample, mono and stereo conversion.
Also cut, concatenate, blend (mix) and de/normalize. Join/split channels (stereo).
Signal generator (`sine`, `square`, `sawtooth`, `triangle`, `sweep`, `noise`).
Musical note to frequency.
Audio downloader for quick workflows which downloads its example data.
"""
# Inconsistent mechanism needed by comfy-cli, no dynamic variables
version = "1.3.0"
# Deprecated mechanism, comfy-cli doesn't support SPDX
license = { file = "LICENSE" }
# Not really used, ComfyUI-Manager doesn't use it
# dependencies = ["seconohe>=1.0.2"]
# So we do it in the reverse way ...
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/set-soft/ComfyUI-AudioBatch"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "set-soft"
DisplayName = "Audio Batch"
Icon = "https://raw.githubusercontent.com/set-soft/ComfyUI-AudioBatch/main/assets/icon_400x400.jpg"
